--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
     "reflect-metadata": "^0.2.2",
+    "tailwind-hamburgers": "^1.3.5",
     "tsyringe": "^4.8.0",
     "vue": "^3.4.23",
     "vue-router": "^4.3.2",
