--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "daisyui": "^4.10.2",
+    "headlessui": "^0.0.0",
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
     "reflect-metadata": "^0.2.2",
