--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "svg.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
