--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "tsyringe": "^4.8.0",
     "vue": "^3.4.23",
     "vue-router": "^4.3.2",
-    "vue-toastification": "^2.0.0-rc.5",
-    "vue3-circle-progress": "^1.0.7"
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.43.1",
